fix: Fix issue with collapsing images during hover

--- a/src/components/PropertyList/Property/styles.module.scss
+++ b/src/components/PropertyList/Property/styles.module.scss
@@ -11,7 +11,6 @@
     button {
       position: absolute;
       top: 220px;
-      right: 16px;
     }
   }
 
